--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Plots
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="#">Latitude vs Max Temperature</a></li>
-                      <li><a class="dropdown-item" href="#">Latitude vs Humidity</a></li>
-                      <li><a class="dropdown-item" href="#">Latitude vs Cloudiness</a></li>
-                      <li><a class="dropdown-item" href="#">Latitude vs Wind Speed</a></li>
-                    </ul>
-                  </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Plots
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="maxtemperature.html">Latitude vs Max Temperature</a>
+                  <a class="dropdown-item" href="humidity.html">Latitude vs Humidity</a>
+                  <a class="dropdown-item" href="cloudiness.html">Latitude vs Cloudiness</a>
+                  <a class="dropdown-item" href="windspeed.html">Latitude vs Wind Speed</a>
+                </div>
+                </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Comparison</a>
               </li>
@@ -39,6 +39,63 @@
           </div>
         </div>
       </nav>
+
+<!--EXPLANATION OF PROJECT-->
+
+
+<!--VISUALIZATIONS-->
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
+    <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></li>
+    <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></li>
+    <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <a href="maxtemperature.html">
+      <img src="Assets/Fig1.png" class="d-block w-100" alt="Latitude vs Max Temperature plot">
+      </a>
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Latitude vs Max Temperature</h5>
+      </div>
+    </div>
+    <div class="carousel-item active">
+      <a href="humidity.html">
+      <img src="Assets/Fig2.png" class="d-block w-100" alt="Latitude vs Humidity plot">
+      </a>
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Latitude vs Humidity</h5>
+      </div>
+    </div>
+    <div class="carousel-item active">
+      <a href="cloudiness.html">
+      <img src="Assets/Fig3.png" class="d-block w-100" alt="Latitude vs Cloudiness plot">
+      </a>
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Latitude vs Cloudiness</h5>
+      </div>
+    </div>
+    <div class="carousel-item active">
+      <a href="windspeed.html">
+      <img src="Assets/Fig4.png" class="d-block w-100" alt="Latitude vs Wind Speed plot">
+      </a>
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Latitude vs Wind Speed</h5>
+      </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </a>
+</div>
+
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
