--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Latitude</a>
+          <a class="navbar-brand" href="index.html">Latitude</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -40,60 +40,57 @@
         </div>
       </nav>
 
-<!--EXPLANATION OF PROJECT-->
 
-
-<!--VISUALIZATIONS-->
-<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
-    <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></li>
-    <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></li>
-    <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <a href="maxtemperature.html">
-      <img src="Assets/Fig1.png" class="d-block w-100" alt="Latitude vs Max Temperature plot">
-      </a>
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Latitude vs Max Temperature</h5>
-      </div>
-    </div>
-    <div class="carousel-item active">
-      <a href="humidity.html">
-      <img src="Assets/Fig2.png" class="d-block w-100" alt="Latitude vs Humidity plot">
-      </a>
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Latitude vs Humidity</h5>
-      </div>
-    </div>
-    <div class="carousel-item active">
-      <a href="cloudiness.html">
-      <img src="Assets/Fig3.png" class="d-block w-100" alt="Latitude vs Cloudiness plot">
-      </a>
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Latitude vs Cloudiness</h5>
-      </div>
-    </div>
-    <div class="carousel-item active">
-      <a href="windspeed.html">
-      <img src="Assets/Fig4.png" class="d-block w-100" alt="Latitude vs Wind Speed plot">
-      </a>
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Latitude vs Wind Speed</h5>
-      </div>
-    </div>
+<!--Summary-->
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Summary: Latitude vs "x"</h1><br>
+    <p class="lead"><p>The purpose of this project was to analyze how weather changes as you get closer to the equator.
+          To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p>
+          After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included:</br>
+          <p>Temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
+        </p><br>
+        <p class ="lead">Want the full analysis of each plot? Click the drop down menu above or the visualization below!</p>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </a>
 </div>
+
+<!--VISUALIZATIONS: Carousel-->
+<div class="container">
+  <div id="PlotCarousel" class="carousel slide carousel-fade" data-ride="carousel">
+    <h2>Visualizations</h2>
+      <div class="carousel-inner">
+          <div class="carousel-item active">
+          <a href="maxtemperature.html">
+          <img src="Assets/Fig1.png" class="d-block w-65" alt="Latitude vs Max Temperature plot">
+          </a>
+          </div>
+          <div class="carousel-item">
+          <a href="humidity.html">
+          <img src="Assets/Fig2.png" class="d-block w-65" alt="Latitude vs Humidity plot">
+          </a>
+          </div>
+          <div class="carousel-item">
+          <a href="cloudiness.html">
+          <img src="Assets/Fig3.png" class="d-block w-65" alt="Latitude vs Cloudiness plot">
+          </a>
+          </div>
+          <div class="carousel-item">
+          <a href="windspeed.html">
+          <img src="Assets/Fig4.png" class="d-block w-65" alt="Latitude vs Wind Speed">
+          </a>
+          </div>
+      </div>
+      <a class="carousel-control-prev" href="#PlotCarousel" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon"></span>
+          <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#PlotCarousel" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+      </a>
+  </div>
+</div>
+
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
