added charts to comparisons.html and created chart in data.html

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                 </div>
                 </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Comparison</a>
+                <a class="nav-link active" aria-current="page" href="comparisons.html">Comparisons</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Data</a>
+                <a class="nav-link" href="data.html">Data</a>
               </li>
             </ul>
           </div>
@@ -56,8 +56,8 @@
 
 <!--VISUALIZATIONS: Carousel-->
 <div class="container">
+  <h2>Visualizations</h2>
   <div id="PlotCarousel" class="carousel slide carousel-fade" data-ride="carousel">
-    <h2>Visualizations</h2>
       <div class="carousel-inner">
           <div class="carousel-item active">
           <a href="maxtemperature.html">
