added visualizations to maxtemp/humidity/cloudiness/windspeed.html, added other visualizations as well, added analysis to maxtemp/humidity.html; need to fix navbar minimized menu

--- a/humidity.html
+++ b/humidity.html
@@ -39,6 +39,54 @@
         </div>
       </nav>
 
+    <!--HUMIDITY VISUALIZATION-->
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4">Humidity</h1>
+        </div>
+    </div>
+    <div class="container">
+        <img style="height: 750px; width: 100%; display: block;" src="Assets/Fig2.png" alt="Latitude vs Humidity">
+        <p class="lead">There is a very weak to no linear relationship between humidity percentage and latitude based on this graph. There appears to be a large amount of cities at 100% humidity from about -25 latitude through ~70 latitude.</p>
+    </div>
+
+    <!--Other Visualizations-->
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h2 class="display-6">Other Visualizations</h2>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-sm-12">
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h5 class="card-title" style="text-align: center"><a href="maxtemperature.html">vs Max Temperature</h5></a>
+                    </div>
+                    <img class="img-thumbnail" src="Assets/Fig1.png" alt="Latitude vs Max Temperature plot">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 col-sm-12">
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h5 class="card-title" style="text-align: center"><a href="cloudiness.html">vs Cloudiness</h5></a>
+                    </div>
+                    <img class="img-thumbnail" src="Assets/Fig3.png" alt="Latitude vs Cloudiness plot">
+                </div>
+            </div>
+            <div class="col-md-6 col-sm-12">
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h5 class="card-title" style="text-align: center"><a href="windspeed.html">vs Wind Speed</h5></a>
+                    </div>
+                    <img class="img-thumbnail" src="Assets/Fig4.png" alt="Latitude vs Wind Speed plot">
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
